--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,72 +1,72 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Візнюк Вікторія Юріївна</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <div class="photo">
-        <img src="photo.jpg" alt="my_photo" />
+<html lang="uk">
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Візнюк Вікторія Юріївна</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div class="photo">
+      <img src="photo.jpg" alt="my_photo">
+    </div>
+    <div class="heading">
+      <h1>Візнюк Вікторія Юріївна</h1>
+    </div>
+  </header>
+  <hr>
+  <div class="article">
+    <p class="autobiography" align="justify">
+      Я, Візнюк Вікторія Юріївна, народилась 25 січня 2005 року в місті
+      Чернівці Чернівецької області. Вчилась 1-4 класи у Чернівецькі молодшій
+      школі №25, а 5-11 класи у Чернівецькій старшій школі №25. Закінчила
+      школу із золотою медаллю.
+    </p>
+    <p align="justify">
+      Брала участь у різних конкурсах міського рівня та в олімпіадах з
+      математики та фізики. Займалася танцями різних стилів. Наразі мої хоббі
+      це гра на піаніно, вокал та плетіння браслетів.
+    </p>
+    <p align="justify">
+      Вступила до Чернівецького національного університету імені Юрія
+      Федьковича на факультет математики та інформатики на спеціальність
+      "Прикладна математика". Зараз навчаюсь на 2-ому курсі.
+    </p>
+    <p align="justify">
+      Голова відео студії "MathTube". Це одна з комісій профбюро на факультеті
+      математики та інформатики. Є учасницею команди "BUL'KI production". Ми
+      вирішуємо проблему споживання російськомовного контенту шляхом створення
+      україномовного. Монтую відео. Брала участь у організації "UpShift".
+      Працюю репетитором з математики, в компанії "KM медіа" та працюю в
+      посередній компанії "Smat Solution" на американську компанію назву якої
+      не маю права розповсюджувати.
+    </p>
+  </div>
+  <hr>
+  <div class="section">
+    <div class="links">
+      <ul>
+        <li><a href="./social.html">Мої профілі в соціальних мережах</a></li>
+        <li>
+          <a href="./labs.html">Мої лабораторні роботи з курсу "ОІТ"</a>
+        </li>
+      </ul>
+    </div>
+    <hr>
+    <div class="contacts">
+      <div class="text">
+        <p>
+          <a href="mailto:vizniuk.viktoriia@chnu.edu.ua">Напишіть</a> або
+          <a href="tel:+38991819545">зателефонуйте</a> мені
+        </p>
       </div>
-      <div class="heading">
-        <h1>Візнюк Вікторія Юріївна</h1>
-      </div>
-    </header>
-    <hr />
-    <article>
-      <p class="autobiography">
-        Я, Візнюк Вікторія Юріївна, народилась 25 січня 2005 року в місті
-        Чернівці Чернівецької області. Вчилась 1-4 класи у Чернівецькі молодшій
-        школі №25, а 5-11 класи у Чернівецькій старшій школі №25. Закінчила
-        школу із золотою медаллю.
-      </p>
-      <p>
-        Брала участь у різних конкурсах міського рівня та в олімпіадах з
-        математики та фізики. Займалася танцями різних стилів. Наразі мої хоббі
-        це гра на піаніно, вокал та плетіння браслетів.
-      </p>
-      <p>
-        Вступила до Чернівецького національного університету імені Юрія
-        Федьковича на факультет математики та інформатики на спеціальність
-        "Прикладна математика". Зараз навчаюсь на 2-ому курсі.
-      </p>
-      <p>
-        Голова відео студії "MathTube". Це одна з комісій профбюро на факультеті
-        математики та інформатики. Є учасницею команди "BUL'KI production". Ми
-        вирішуємо проблему споживання російськомовного контенту шляхом створення
-        україномовного. Монтую відео. Брала участь у організації "UpShift".
-        Працюю репетитором з математики, в компанії "KM медіа" та працюю в
-        посередній компанії "Smat Solution" на американську компанію назву якої
-        не маю права розповсюджувати.
-      </p>
-    </article>
-    <hr />
-    <section>
-      <div class="links">
-        <ul>
-          <li><a href="./social.html">Мої профілі в соціальних мережах</a></li>
-          <li>
-            <a href="./labs.html">Мої лабораторні роботи з курсу "ОІТ"</a>
-          </li>
-        </ul>
-      </div>
-      <div class="contacts">
-        <div class="text">
-          <p>
-            <a href="mailto:vizniuk.viktoriia@chnu.edu.ua">Напишіть</a> або
-            <a href="tel:+38991819545">зателефонуйте</a> мені
-          </p>
-        </div>
-      </div>
-    </section>
-  </body>
+    </div>
+  </div>
+</body>
+
 </html>
