--- a/lab2/social.html
+++ b/lab2/social.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Соціальні мережі</title>
-    <link rel="stylesheet" href="social.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="social.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Мої соціальні мережі</h1>
     </header>
-    <hr />
-    <section>
+    <hr>
+    <div class="section">
       <ol>
         <li>
           <a
@@ -47,16 +45,11 @@
           <a target="_blank" href="https://t.me/vizniuchkaaa">Telegram</a>
         </li>
       </ol>
-    </section>
-    <hr />
+    </div>
+    <hr>
     <div class="back">
-      <a href="./index.html">
-        <input
-          class="btn"
-          type="button"
-          value="Повернутися до головної сторінки"
-        />
-      </a>
+      <a href="index.html">Повернутися до головної сторінки
+        </a>
     </div>
   </body>
 </html>
