--- a/lab2/labs.html
+++ b/lab2/labs.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Лабораторні роботи</title>
-    <link rel="stylesheet" href="social.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <h1>Мої лабораторні роботи з курсу "ОІТ"</h1>
-    </header>
-    <hr />
-    <section>
-      <ol>
-        <li>
-          <a
-            href="https://github.com/vikavizniuk/Internet-technology/blob/main/lab1.html"
-            target="_blank"
-            >Лабораторна робота 1</a
-          >
-        </li>
-        <li><a href="" target="_blank">Лабораторна робота 2</a></li>
-      </ol>
-    </section>
-    <hr />
-    <div class="back">
-      <a href="./index.html">
-        <input
-          class="btn"
-          type="button"
-          value="Повернутися до головної сторінки"
-        />
-      </a>
-    </div>
-  </body>
+<html lang="uk">
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Лабораторні роботи</title>
+  <link rel="stylesheet" href="social.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <h1>Мої лабораторні роботи з курсу "ОІТ"</h1>
+  </header>
+  <hr>
+  <div class="section">
+    <ol>
+      <li>
+        <a href="https://github.com/vikavizniuk/Internet-technology/blob/main/lab1.html" target="_blank">Лабораторна
+          робота 1</a>
+      </li>
+      <li>
+        <a href="https://github.com/vikavizniuk/Internet-technology/tree/main/lab2" target="_blank">Лабораторна робота
+          2</a>
+      </li>
+    </ol>
+  </div>
+  <hr>
+  <div class="back">
+    <a href="index.html">Повернутися до головної сторінки
+    </a>
+  </div>
+</body>
+
 </html>
