--- a/lab2/index.html
+++ b/lab2/index.html
@@ -21,23 +21,23 @@
   </header>
   <hr>
   <div class="article">
-    <p class="autobiography" align="justify">
+    <p class="autobiography">
       Я, Візнюк Вікторія Юріївна, народилась 25 січня 2005 року в місті
       Чернівці Чернівецької області. Вчилась 1-4 класи у Чернівецькі молодшій
       школі №25, а 5-11 класи у Чернівецькій старшій школі №25. Закінчила
       школу із золотою медаллю.
     </p>
-    <p align="justify">
+    <p>
       Брала участь у різних конкурсах міського рівня та в олімпіадах з
       математики та фізики. Займалася танцями різних стилів. Наразі мої хоббі
       це гра на піаніно, вокал та плетіння браслетів.
     </p>
-    <p align="justify">
+    <p>
       Вступила до Чернівецького національного університету імені Юрія
       Федьковича на факультет математики та інформатики на спеціальність
       "Прикладна математика". Зараз навчаюсь на 2-ому курсі.
     </p>
-    <p align="justify">
+    <p>
       Голова відео студії "MathTube". Це одна з комісій профбюро на факультеті
       математики та інформатики. Є учасницею команди "BUL'KI production". Ми
       вирішуємо проблему споживання російськомовного контенту шляхом створення
